--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>XLsn0w</title>
+    <title>WoLeo's Cydia Repo</title>
     <noscript>
-        <link rel="stylesheet" href="ios7.min.css?_=f" type="text/css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/woleo-z/repo@master/ios7.min.css?_=f" type="text/css" />
     </noscript>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta charset="utf-8">
 </head>
-<script src="jquery-3.5.1.min.js"></script>
-<script src="description.js?_=f"></script>
+<script src="https://cdn.jsdelivr.net/gh/woleo-z/repo@master/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/woleo-z/repo@master/description.js?_=f"></script>
 
 <body onload="loadPackages();">
     <main id="content">
-        <p style="text-align: center; font-size: 99%;" role="header">微信公众号Cydia官方源</p>
+        <p style="text-align: center; font-size: 99%;" role="header">WoLeo Cydia源</p>
         <ul>
             <li class="has-icon">
                 <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://xlsn0w.github.io/tweaks/" role="button">
-                    <img style = "border-radius: 20%;" href="cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
+                    <img style = "border-radius: 20%;" href="https://cdn.jsdelivr.net/gh/woleo-z/repo@master/cydia7.png" alt="" srcset="cydia7.png 2x, cydia7.png 3x" class="icon"/>
                     <label>在"Cydia"中添加公众号源</label>
                 </a>
             </li>
         </ul>
 
-        <p style="font-weigh: bolder; text-align: center; font-size: 90%;" role="footer" id="neo">Cydia公众号源: https://xlsn0w.github.io/tweaks/</p>
+        <p style="font-weigh: bolder; text-align: center; font-size: 90%;" role="footer" id="neo">Cydia源: https://woleo-z.github.io/repo/</p>
         <noscript>
             <h2></h2><ul style="background:#ff0000"><center><li><p>Error JavaScript Disabled.</p></li></center></ul>
         </noscript>
@@ -35,16 +35,9 @@
         
         <ul>
             <li class="has-icon">
-                <a href="https://github.com/XLsn0w" target="_blank" role="button">
-                    <img style = "border-radius: 20%;" href="github.png" alt="" srcset="github.png 2x, github.png 3x" class="icon"/>
+                <a href="https://github.com/woleo-z" target="_blank" role="button">
+                    <img style = "border-radius: 20%;" href="https://cdn.jsdelivr.net/gh/woleo-z/repo@master/github.png" alt="" srcset="github.png 2x, github.png 3x" class="icon"/>
                     <label>XLsn0w's GitHub</label>
-                </a>
-            </li>
-
-            <li class="has-icon">
-                <a href="https://twitter.com/XLsn0w" target="_blank" role="button">
-                    <img style = "border-radius: 20%;" href="twitter.png" alt="" srcset="twitter.png 2x, twitter.png 3x" class="icon"/>
-                    <label>XLsn0w's Twitter</label>
                 </a>
             </li>
             
